# wc3lib

./: .clang-format  .gitignore  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  CODESTYLE  ChangeLog  INSTALL  README  README.md  TODO  WindowsToolChain.cmake  appveyor.yml  codestyle.py  generateui.sh  ubuntu_install.sh  wc3libConfig.h.in
doc/: CMakeLists.txt  doxygen.conf  testing.txt
doc/blp/: BLP.txt  spec.txt
doc/editor/: FEATURES
doc/lang/: Mögliche Compiler-Implementation für Jass++  Mögliche Virtuelle-Maschine-Implementation für Jass  SimpleJass-Definition  vjassdoc-Datenbanken.txt
doc/map/: Meta Data Specification.odt  spec.txt
doc/mdlx/: Classes.txt  mdlxdata.txt
doc/vjass/: vjass.txt
lib/: CMakeLists.txt
lib/StormLib/: .directory  CMakeLists.txt  Storm.lib  StormLib.sln  StormLib.vcproj
lib/huffman/: CMakeLists.txt  huffman.c  huffman.cpp  huffman.h
lib/md5-cc/: CMakeLists.txt  md5.cc  md5.hh
lib/pklib/: CMakeLists.txt  explode.c  implode.c  pklib.h
lib/readblend/: CMakeLists.txt  ReadBlend.userprefs  abs-file.h  readblend.c  readblend.h
lib/warblender/: INSTALL  Makefile  README  TODO  converter.py  exporter.py  importer.py  mdx.css  mdx.js  mdxinfo.py  warblender_export.py  warblender_import.py
lib/wave/: CMakeLists.txt  Makefile  cmake_install.cmake  wave.cpp  wave.h
locale/: CMakeLists.txt  editor.pot  mpq.pot  potgenerator.sh  wc3converter.pot  wc3editor.pot  wc3lib.pot
mime/: CMakeLists.txt  wc3lib.xml
services/: CMakeLists.txt  editor.desktop  mpq.protocol
share/listfiles/: CMakeLists.txt  Diablo I.txt  Diablo II LOD.txt  Hellfire.txt  Listfile.txt  Lords of Magic.txt  Starcraft BW.txt  Starcraft II.txt  Warcraft II BNE.txt  Warcraft III.txt
src/: CMakeLists.txt  blp.hpp  color.cpp  color.hpp  core.hpp  editor.hpp  exception.cpp  exception.hpp  format.cpp  format.hpp  game.hpp  i18n.hpp  internationalisation.hpp  jass.hpp  json.hpp  lang.hpp  libraryloader.cpp  libraryloader.hpp  map.hpp  mdlx.hpp  mpq.hpp  platform.hpp  qi.hpp  slk.hpp  spirit.cpp  spirit.hpp  utilities.cpp  utilities.hpp  vertex.cpp  vertex.hpp  vm.hpp  wc3lib.hpp
src/app/: .directory  CMakeLists.txt  converter.cpp  editor.cpp  jassc.cpp  jasstrans.cpp  mpq.cpp  plugins.cfg  stormlibcomparison.cpp  tilesetter.cpp  wc3abilityhotkeyfixer.cpp  wc3abilitylevellimiter.cpp  wc3baseobjectchanger.cpp  wc3converter.cpp  wc3editor.cpp  wc3model.cpp  wc3mpq.cpp  wc3object.cpp  wc3objectcompressor.cpp  wc3objectdataextractor.cpp  wc3objectlevellimiter.cpp  wc3objectquery.cpp  wc3texture.cpp  wc3tilesetter.cpp  wc3trans.cpp  wc3trigger.cpp  wc3triggervalidate.cpp  wc3unit.cpp
src/blp/: CMakeLists.txt  blp.cpp  blp.hpp  jpeg.cpp  jpeg.hpp  platform.hpp
src/editor/: .directory  CMakeLists.txt  FindOgreForwc3lib.cmake  abilitydata.cpp  abilitydata.hpp  abilitytablewidget.hpp  aieditor.cpp  aieditor.hpp  blpcodec.cpp  blpcodec.hpp  blpiohandler.cpp  blpiohandler.hpp  blpioplugin.cpp  blpioplugin.hpp  brush.cpp  brush.hpp  buffdata.cpp  buffdata.hpp  campaigneditor.cpp  campaigneditor.hpp  collisionshape.cpp  collisionshape.hpp  colorpalettedialog.cpp  colorpalettedialog.hpp  configuration.kcfgc  destructabledata.cpp  destructabledata.hpp  doodaddata.cpp  doodaddata.hpp  editor.cpp  editor.hpp  editor.hpp~  editor.kcfg  editorconfig.kcfg  editorconfig.kcfgc  environment.cpp  environment.hpp  filemetainfo.cpp  filemetainfo.hpp  importmanager.cpp  (+144 more)
src/game/: CMakeLists.txt  mainmenu.cpp  mainmenu.hpp
src/jass/: CMakeLists.txt  adaptions.hpp  analyzer.cpp  analyzer.hpp  ast.hpp  astvisitors.hpp  client.hpp  error.cpp  error.hpp  generator.cpp  generator.hpp  generator_impl.cpp  generator_impl.hpp  grammar.cpp  grammar.hpp  lexer.cpp  lexer.hpp  report.cpp  report.hpp  warning.cpp  warning.hpp
src/json/: CMakeLists.txt  customobjects.cpp  customobjects.hpp  mdlx.cpp  mdlx.hpp  platform.hpp
src/lang/: CMakeLists.txt  compiler.cpp  compiler.hpp  doccomment.cpp  doccomment.hpp  driver.cpp  driver.hpp  file.cpp  file.hpp  language.cpp  language.hpp  parser.cpp  parser.hpp  position.hpp  scope.hpp  sourcefile.cpp  sourcefile.hpp  syntaxerror.cpp  syntaxerror.hpp  token.cpp  token.hpp  utilities.cpp  utilities.hpp
src/map/: CMakeCache.txt  CMakeLists.txt  camera.cpp  camera.hpp  cameras.cpp  cameras.hpp  campaign.cpp  campaign.hpp  campaigninfo.cpp  campaigninfo.hpp  customobjects.cpp  customobjects.hpp  customobjectscollection.cpp  customobjectscollection.hpp  customtexttriggers.cpp  customtexttriggers.hpp  customunits.cpp  customunits.hpp  environment.cpp  environment.hpp  importedfiles.cpp  importedfiles.hpp  info.cpp  info.hpp  itemset.hpp  mapstrings.cpp  mapstrings.hpp  menuminimap.cpp  menuminimap.hpp  metadata.hpp  minimap.cpp  minimap.hpp  object.cpp  object.hpp  pathmap.cpp  pathmap.hpp  platform.hpp  playable.hpp  rect.cpp  rect.hpp  (+50 more)
src/mdlx/: CMakeLists.txt  ambientcolor.cpp  ambientcolor.hpp  ambientcolors.cpp  ambientcolors.hpp  ambientintensities.cpp  ambientintensities.hpp  ambientintensity.cpp  ambientintensity.hpp  attachment.cpp  attachment.hpp  attachments.cpp  attachments.hpp  attachmentvisibilities.cpp  attachmentvisibilities.hpp  attachmentvisibility.cpp  attachmentvisibility.hpp  bone.cpp  bone.hpp  bones.cpp  bones.hpp  bounds.cpp  bounds.hpp  camera.cpp  camera.hpp  camerarotationlength.cpp  camerarotationlength.hpp  camerarotationlengths.cpp  camerarotationlengths.hpp  cameras.cpp  cameras.hpp  cameratargettranslation.cpp  cameratargettranslation.hpp  cameratargettranslations.cpp  cameratargettranslations.hpp  cameratranslation.cpp  cameratranslation.hpp  cameratranslations.cpp  cameratranslations.hpp  collisionshape.cpp  (+244 more)
src/mpq/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  archive.cpp  archive.hpp  attributes.cpp  attributes.hpp  block.cpp  block.hpp  file.cpp  file.hpp  hash.cpp  hash.hpp  listfile.cpp  listfile.hpp  mpq.cpp  mpq.hpp  mpq.hpp~  mpqfile.cpp  mpqfile.hpp  mpqfile.hpp~  mpqfileostream.cpp  mpqfileostream.hpp  platform.hpp  (+7 more)
windows/: CMakeCache.txt  CMakeCacheFromWindows.txt  CMakeLists.txt  DEPENDENCIES  Toolchain-mingw32.cmake
(+673 files in other folders)
