add_subdirectory(huffman)
list(APPEND linkDirectories huffman)
add_subdirectory(pklib)
list(APPEND linkDirectories pklib)
if (FLAG_BLEND_USE)
	add_subdirectory(readblend)
	list(APPEND linkDirectories readblend)
endif ()
if (FLAG_DEBUG_USE)
	# TODO See TODO file (broken Linux support)
	#add_subdirectory(SFmpqapi)
	#list(APPEND linkDirectories SFmpqapi)
	add_subdirectory(StormLib)
	list(APPEND linkDirectories StormLib/stormlib)
	include_directories(StormLib)
endif ()
add_subdirectory(wave)
list(APPEND linkDirectories wave)

link_directories(${linkDirectories})