if (MPQ)
	add_subdirectory(huffman)
	list(APPEND linkDirectories huffman)
	add_subdirectory(pklib)
	list(APPEND linkDirectories pklib)
	if (DEBUG)
		# TODO See TODO file (broken Linux support)
		#add_subdirectory(SFmpqapi)
		#list(APPEND linkDirectories SFmpqapi)
		add_subdirectory(StormLib)
		list(APPEND linkDirectories StormLib/stormlib)
		include_directories(StormLib)
	endif ()
	add_subdirectory(wave)
	list(APPEND linkDirectories wave)

	link_directories(${linkDirectories})
endif ()